--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
-    <string name="app_name">MakeMoney</string>
+    <string name="app_name">转转购物</string>
     <string name="shop_main_tab1">商城</string>
     <string name="shop_main_tab2">品类</string>
     <string name="shop_main_tab3">发现</string>
     <string name="shop_main_tab4">我的</string>
+
+    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
+    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
+    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
 </resources>
