--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">转转购物</string>
+    <string name="app_name">MakeMoney</string>
     <string name="shop_main_tab1">商城</string>
     <string name="shop_main_tab2">品类</string>
     <string name="shop_main_tab3">发现</string>
@@ -8,4 +8,16 @@
     <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
     <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
     <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
+
+    <string name="input_phone_number_hint">请输入手机号</string>
+    <string name="password_login_input_hint">请输入密码</string>
+    <string name="vcode">验证码</string>
+    <string name="login">登录</string>
+    <string name="lossPasswordhint">忘记密码？</string>
+    <string name="tudouni_password_login_change">密码登录</string>
+    <string name="telLogin">短信验证码登录</string>
+
+    <string name="password_not_same_error_hint">输入密码不一致</string>
+    <string name="password_format_error_hint">登录密码仅支持数字和字母，区分大小写，不允许包含空格</string>
+    <string name="sure">确定</string>
 </resources>
