--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,18 @@
     <string name="login">登录</string>
     <string name="lossPasswordhint">忘记密码？</string>
     <string name="tudouni_password_login_change">密码登录</string>
+    <string name="telbandin">绑定手机号</string>
+    <string name="verification">验证</string>
+    <string name="find_passsword_hint">找回密码</string>
+    <string name="next_step">下一步</string>
+    <string name="removetelbandin">验证原手机号</string>
+    <string name="telbandinnew">绑定新手机号</string>
     <string name="telLogin">短信验证码登录</string>
+    <string name="sezhi">设置</string>
+    <string name="logout">退出登录</string>
+    <string name="can_not_find_version_name">未知版本号</string>
+    <string name="accountSecurity">账号与安全</string>
+    <string name="password_login">登录密码</string>
 
     <string name="password_not_same_error_hint">输入密码不一致</string>
     <string name="password_format_error_hint">登录密码仅支持数字和字母，区分大小写，不允许包含空格</string>
