--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MakeMoney</string>
+    <string name="app_name">赚赚购物</string>
     <string name="shop_main_tab1">商城</string>
     <string name="shop_main_tab2">品类</string>
     <string name="shop_main_tab3">发现</string>
