--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="password_format_error_hint">登录密码仅支持数字和字母，区分大小写，不允许包含空格</string>
     <string name="sure">确定</string>
     <string name="upUserInfo">编辑资料</string>
+    <string name="mall_coupon">券 ￥</string>
+    <string name="tb_price">淘宝价 ￥</string>
+    <string name="month_sale_count">月销</string>
+    <string name="commission">预估佣金</string>
+    <string name="rmb">￥</string>
 </resources>
